<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/check_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_sync" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sync_ten" />

        <RadioButton
            android:id="@+id/radio_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_hour" />

        <RadioButton
            android:id="@+id/radio_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_day" />
    </RadioGroup>

    <Button
        android:id="@+id/sync_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>