<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/sms_editmsg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/sms_customer_msg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/textView1"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/sms_customer_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/sendSMS" />

        <Button
            android:id="@+id/sms_customer_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/reset" />

    </TableRow>

</RelativeLayout>